@@ -1,5 +1,5 @@
 AUX bcrypt-1.1-Makefile.patch 570 RMD160 85beeb5a269c77f512d4e754066f5884daab65ce SHA1 d1cc782789426be03bbc52922a8b9955c99343fa SHA256 6958aeff3b7cb86c6129039866ceb5b4ba69250862b5a5f644fa1108cd3e5033
 DIST bcrypt-1.1.tar.gz 36781 RMD160 c043a25169b09e7b07c2e00db0d4ca2c3b3d13be SHA1 fd4c7c83fdc560f143bb0e0a8c9fb7aa57e69698 SHA256 b9c1a7c0996a305465135b90123b0c63adbb5fa7c47a24b3f347deb2696d417d
-EBUILD bcrypt-1.1.ebuild 791 RMD160 acd072b35e475ae399e87d5ccc6a0e6cf1ed6caa SHA1 b4ead9c074c8c2808539155027de3b39d0df22af SHA256 17f5e0df3b4bd0daef99ee8fbea2de7726de513469511ef2781b8ce837b4f982
-MISC ChangeLog 1345 RMD160 b16258938b4553641bb3d94905153439084286af SHA1 229929efb48eefe0ba36d766c579707aa869d6aa SHA256 08fbb534c6ce64d3be7901da246f2cc9301c7181c03310d312a77f66987c61c6
+EBUILD bcrypt-1.1.ebuild 783 RMD160 9cbf624693d8d495ac5c3e27030b622993712f4d SHA1 6ed527b67aab5f05a37225381482e7ffe352401d SHA256 6ea5b768f6d285d68368e3d73fe1a02a0c9fe6587e266ec2553fb5252fa5e175
+MISC ChangeLog 1455 RMD160 58a1e999d93cf805a54ae3a4956f4e6f76bcc2d5 SHA1 97c411baea57f1b40083a5157b6b556f7651f435 SHA256 72203072a268caad5c3427ae00b805961de3029b9e40603ebb41fa6ebe5dd43d
 MISC metadata.xml 231 RMD160 c13056229989c3d4f448a7c7abcff3f4ee7ce13c SHA1 2d63dfb700b223f8f37c078692a81b2237896bce SHA256 4595c2615fd7c9095517949b1a920d4457f92801eb9d46307b18aafe58ec2a8a
