@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/bcrypt
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/bcrypt/ChangeLog,v 1.9 2008/02/04 20:25:07 grobian Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/bcrypt/ChangeLog,v 1.10 2009/10/14 00:50:30 halcy0n Exp $
+
+  14 Oct 2009; Mark Loeser <halcy0n@gentoo.org> bcrypt-1.1.ebuild:
+  QA fixes; remove useless dodoc LICENSE
 
   04 Feb 2008; Fabian Groffen <grobian@gentoo.org> bcrypt-1.1.ebuild:
   Dropped ppc-macos keyword, see you in prefix
